--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "devDependencies": {
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
+    "node-sass": "yarn:sass",
+    "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
