--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "author": "mzhaonanq <1002604003@qq.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "rm -rf dist && webpack --config webpack.config.prod.js",
+    "dev": "webpack serve"
+  },
   "devDependencies": {
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
